--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,19 @@
+import org.gradle.internal.jvm.Jvm
+
 buildscript {
+    ext.kotlin_version = '1.5.31'
     repositories {
-        mavenCentral()
         google()
+        mavenCentral()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+println "Gradle uses Java ${Jvm.current()}"
 
 allprojects {
     repositories {
