--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.AppDevNext.Logcat:LogcatCore:2.9.1'
+    implementation 'com.github.AppDevNext.Logcat:LogcatCoreLib:2.10'
+    implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.github.hannesa2:circular-progress-button:1.1'
     implementation 'com.github.johnpersano:supertoasts:1.3.4@aar'
     implementation 'de.psdev.licensesdialog:licensesdialog:1.5.0'
